# exadg

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DG_NavierStokes_DualSplitting.cc  DG_NavierStokes_DualSplitting_Sep23.cc  DG_NavierStokes_DualSplitting_continuous_pressure.cc  EXADGConfig.cmake.in  EXADGOptions.cmake.in  README.md  UnitTestingFramework.cmake  ab__constants_8h_source.html  acoustic__conservation__equations_2driver_8h_source.html  acoustic__conservation__equations_2postprocessor_2output__generator_8h_source.html  acoustic__conservation__equations_2postprocessor_2pointwise__output__generator_8h_source.html  acoustic__conservation__equations_2postprocessor_2postprocessor_8h_source.html  acoustic__conservation__equations_2postprocessor_2postprocessor__base_8h_source.html  acoustic__conservation__equations_2postprocessor_2postprocessor__interface_8h_source.html  acoustic__conservation__equations_2solver_8h_source.html  acoustic__conservation__equations_2spatial__discretization_2interface_8h_source.html  acoustic__conservation__equations_2spatial__discretization_2operators_2operator_8h_source.html  acoustic__conservation__equations_2spatial__discretization_2operators_2weak__boundary__conditions_8h_source.html  acoustic__conservation__equations_2throughput_8h_source.html  acoustic__conservation__equations_2user__interface_2analytical__solution_8h_source.html  acoustic__conservation__equations_2user__interface_2application__base_8h_source.html  acoustic__conservation__equations_2user__interface_2boundary__descriptor_8h_source.html  acoustic__conservation__equations_2user__interface_2declare__get__application_8h_source.html  acoustic__conservation__equations_2user__interface_2enum__types_8h_source.html  acoustic__conservation__equations_2user__interface_2field__functions_8h_source.html  acoustic__conservation__equations_2user__interface_2implement__get__application_8h_source.html  acoustic__conservation__equations_2user__interface_2parameters_8h_source.html  acoustics_8h_source.html  adaptive__mesh__refinement_8h_source.html  additive__schwarz__preconditioner_8h_source.html  aero__acoustic_2driver_8h_source.html  aero__acoustic_2single__field__solvers_2fluid_8h_source.html  aero__acoustic_2solver_8h_source.html  aero__acoustic_2user__interface_2application__base_8h_source.html  aero__acoustic_2user__interface_2declare__get__application_8h_source.html  aero__acoustic_2user__interface_2field__functions_8h_source.html  (+1547 more)
applications/: CMakeLists.txt  DGConvectionDiffusionProblem.cc  DGNavierStokesProblem.cc  DG_NavierStokes_DualSplitting.cc  SteadyConvectionDiffusion.cc  SteadyNavierStokes.cc  UnsteadyConvectionDiffusion.cc  UnsteadyNavierStokesCoupledSolver.cc  UnsteadyNavierStokesDualSplitting.cc  UnsteadyNavierStokesPressureCorrection.cc  compressible_navier_stokes.cc  compressible_navier_stokes_operator_matrix_free.cc  compressible_navier_stokes_performance.cc  compressible_navier_stokes_throughput.cc  convection_diffusion.cc  convection_diffusion_performance.cc  convection_diffusion_throughput.cc  cylinder_mesh.inp  dg_periodic_hill.cc  dg_turbulent_channel.cc  elasticity.cc  elasticity_throughput.cc  fe_flow_past_cylinder.cc  fe_poiseuille.cc  fe_turbulent_channel.cc  fluid_structure_interaction.cc  gmres_test.cc  incompressible_flow_with_transport.cc  incompressible_navier_stokes.cc  incompressible_navier_stokes_ale.cc  incompressible_navier_stokes_performance.cc  incompressible_navier_stokes_precursor.cc  incompressible_navier_stokes_throughput.cc  incompressible_navier_stokes_two_domains.cc  laplace.cc  laplace_operator_matrix_free.cc  lung_test.cc  lung_tria.cc  multigrid_solver.cc  navier_stokes_operator_matrix_free.cc  (+19 more)
applications/ConvectionDiffusionTestCases/: BoundaryLayerProblem.h  ConstWindConstRHS.h  ConstantRHS.h  DeformingHill.h  DiffusiveProblemHomogeneousDBC.h  DiffusiveProblemHomogeneousNBC.h  DiffusiveProblemHomogeneousNBC2.h  PropagatingSineWave.h  RotatingHill.h
applications/NavierStokesTestCases/: Beltrami.h  Cavity.h  Couette.h  Cuette.h  FlowPastCylinder.h  Kovasznay.h  Poiseuille.h  StokesGuermond.h  StokesShahbazi.h  TaylorVortex.h  TurbulentChannel.h  Vortex.h
applications/aero_acoustic/: CMakeLists.txt
applications/compressible_navier_stokes/: CMakeLists.txt  solver.cpp  throughput.cpp
applications/compressible_navier_stokes_test_cases/: 3D_taylor_green_vortex.h  channel_flow.h  couette_flow.h  euler_vortex_flow.h  flow_past_cylinder.h  manufactured_solution.h  steady_shear_flow.h  template.h  turbulent_channel.h
applications/convection_diffusion/: CMakeLists.txt
applications/convection_diffusion_test_cases/: boundary_layer_problem.h  cavity.h  const_rhs_const_and_circular_wind.h  constant_rhs.h  deforming_hill.h  diffusive_problem.h  diffusive_problem_homogeneous_dbc.h  diffusive_problem_homogeneous_nbc.h  diffusive_problem_homogeneous_nbc2.h  periodic_box.h  propagating_sine_wave.h  rotating_hill.h  template.h
applications/fluid_structure_interaction/: CMakeLists.txt
applications/fluid_structure_interaction_precice/: CMakeLists.txt
applications/fluid_structure_interaction_test_cases/: bending_wall.h  cylinder_with_flag.h  template.h  vortex.h
applications/grid_tools/: cube_moving_manifold.h  dealii_extensions.h  deformed_cube_manifold.h  function_mesh_movement.h  grid_functions_periodic_hill.h  grid_functions_turbulent_channel.h  mesh_flow_past_cylinder.h  mesh_movement.h  mesh_movement_functions.h  periodic_box.h
applications/incompressible_flow_with_rans/: CMakeLists.txt
applications/incompressible_flow_with_transport/: CMakeLists.txt
applications/incompressible_flow_with_transport_test_cases/: cavity.h  cavity_natural_convection.h  lung.h  mantle_convection.h  rayleigh_bernard.h  rising_bubble.h  template.h
applications/incompressible_navier_stokes/: CMakeLists.txt  solver.cpp  throughput.cpp
prototypes/: CMakeLists.txt  global_coarsening.cpp  matrix_free_integrals_and_kernels.cpp  mixed_meshes.cc  moving_mesh.cpp  particles.cpp  simplex_grids.h
tests/: CMakeLists.txt  make-all.sh
(+3120 files in other folders)
